fixing social icons list overflow

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -264,9 +264,11 @@
 
 	.opn__button {
 		width: 290px;
-	}
-	.opn__button {
 		margin-bottom: 20px;
+	}
+
+	.opn__button--how::before {
+		left: 35px;
 	}
 
 	.opn__join-text {
@@ -308,9 +310,10 @@
 		position: relative;
 		display: block;
 		margin: 0;
-		margin-bottom: 25px;
+		margin-bottom: 40px;
 		font-size: 20px;
 		line-height: 31px;
+		text-align: center;
 		color: #ffffff;
 	}
 
@@ -318,7 +321,7 @@
 		content: "";
 		position: absolute;
 		left: 0;
-		bottom: -15px;
+		bottom: -10px;
 		width: 100%;
 		height: 1px;
 		background-color: #ffffff;
@@ -326,6 +329,7 @@
 
 	.opk__list {
 		display: flex;
+		flex-wrap: wrap;
 		margin: 0;
 		padding: 0;
 		list-style: none;
@@ -333,7 +337,9 @@
 	}
 
 	.opk__item a {
-		display: block;
+		display: flex;
+		justify-content: center;
+		align-items: center;
 		width: 35px;
 		height: 30px;
 		text-align: center;
@@ -1111,5 +1117,20 @@
 @media screen and (max-width: 369px) {
 	.first-bg {
 		top: 710px;
+		min-height: 535px;
+	}
+
+	.opk {
+		display: block;
+	}
+
+	.opk__list {
+		justify-content: space-around;
+	}
+
+	.opk__item a {
+		align-items: center;
+		width: 80px;
+		margin-bottom: 20px;
 	}
 }
